--- a/UserRegistration/Views/Shared/_Layout.cshtml
+++ b/UserRegistration/Views/Shared/_Layout.cshtml
@@ -32,7 +32,7 @@
                         <li>@Html.ActionLink("List", "List", "User_Info")</li>
                         <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
                         <li>
-                            <a>  @User.Identity.Name</a> 
+                            <a>  @User.Identity.Name.</a> 
                         </li>
                         <li>@Html.ActionLink("Sign Out", "logout", "User_Info")</li>
                     }
